# zenith-rs

./: Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml
.config/: config.toml
.github/: CODEOWNERS
.github/workflows/: docker-ecr-push.yml  ecr-cd.yml  rust-ci.yml
abi/: BundleHelper.json  HostOrders.json  Passage.json  RollupOrders.json  RollupPassage.json  Transactor.json  Zenith.json
crates/builder/: Cargo.toml  sequencer.openapi.yml
crates/builder/src/: bindings.rs  config.rs  env.rs  lib.rs  main.rs  service.rs  signer.rs
crates/builder/src/tasks/: block.rs  mod.rs  submit.rs  tx_poller.rs
crates/builder/tests/: tx_poller_test.rs
crates/examples/: Cargo.toml
crates/examples/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/abi/: HostOrders.json  OrderDestination.json  OrderOrigin.json  OrderPermit2.json  Orders.json  Passage.json  PassagePermit2.json  RollupOrders.json  RollupPassage.json  Transactor.json  Zenith.json  passage.json  zenith.json
crates/types/src/: bindings.rs  block.rs  lib.rs  req.rs  resp.rs
crates/types/src/orders/: agg.rs  mod.rs  signed.rs
src/: bindings.rs  block.rs  bundle.rs  lib.rs  req.rs  resp.rs
src/orders/: agg.rs  signed.rs
