[package]
name = "zenith-types"
description = "Types for the zenith smart contracts"

version = "0.10.1"
edition = "2021"
rust-version = "1.82"
authors = ["Zenith Contributors"]
homepage = "https://github.com/init4tech/zenith"
repository = "https://github.com/init4tech/zenith"
license = "AGPL-3.0"

[dependencies]
alloy-primitives = { version = "0.8", features = ["serde", "tiny-keccak"] }
alloy-sol-types = { version = "0.8", features = ["json"] }

alloy-rlp = { version = "0.3.4" }

alloy = { version = "=0.5.4", features = ["full", "json-rpc", "signer-aws"] }
alloy-contract = { version = "=0.5.4", features = ["pubsub"] }

serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros"] }

