[package]
name = "zenith-types"
description = "Types for the zenith smart contracts"

version = "0.13.0"
edition = "2021"
rust-version = "1.82"
authors = ["Zenith Contributors"]
homepage = "https://github.com/init4tech/zenith"
repository = "https://github.com/init4tech/zenith"
license = "AGPL-3.0"

[dependencies]
alloy = { version = "=0.7.3", features = ["full", "json-rpc", "signer-aws", "rpc-types-mev"] }
alloy-primitives = { version = "0.8.11", features = ["serde", "tiny-keccak"] }
alloy-sol-types = { version = "0.8.11", features = ["json"] }
alloy-rlp = { version = "0.3.4" }
alloy-contract = { version = "=0.7.3", features = ["pubsub"] }

serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.94"
tokio = { version = "1.37.0", features = ["macros"] }
