[package]
name = "zenith-types"
description = "Types for the zenith smart contracts"

version = "0.14.0"
edition = "2021"
rust-version = "1.82"
authors = ["Zenith Contributors"]
homepage = "https://github.com/init4tech/zenith"
repository = "https://github.com/init4tech/zenith"
license = "AGPL-3.0"

[dependencies]
alloy = { version = "=0.9.2", features = ["full", "json-rpc", "signer-aws", "rpc-types-mev", "rlp"] }

serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.94"
tokio = { version = "1.37.0", features = ["macros"] }
