[package]
name = "zenith-builder-example"
version = "0.1.0"
description = "Zenith Builder Example"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "builder"

[[bin]]
name = "zenith-builder-example"
path = "bin/builder.rs"

[dependencies]
zenith-types.workspace = true

alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true

alloy.workspace = true

aws-sdk-kms.workspace = true
aws-config.workspace = true

hex.workspace = true
serde.workspace = true
tracing.workspace = true

axum = "0.7.5"
eyre = "0.6.12"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
ruint = "1.12.1"
serde_json = "1.0"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
async-trait = "0.1.80"
