[package]
name = "examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
eyre = "0.6.12"
reqwest = { version = "0.12.5", features = ["json"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
