[package]
name = "zenith-types"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-signer.workspace = true

serde.workspace = true
tracing.workspace = true
alloy-rlp.workspace = true

[dev-dependencies]
serde_json = "1.0.116"
