[package]
name = "zenith-types"
description = "Types for the zenith smart contracts"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-signer.workspace = true

serde.workspace = true
alloy-rlp.workspace = true

[dev-dependencies]
serde_json = "1.0.116"
alloy-signer-local.workspace = true
tokio = { version = "1.37.0", features = ["macros"] }
