[package]
name = "zenith-types"
description = "Types for the zenith smart contracts"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rlp.workspace = true

alloy.workspace = true
alloy-contract.workspace = true

serde.workspace = true

[dev-dependencies]
serde_json = "1.0.116"
alloy.workspace = true
tokio = { version = "1.37.0", features = ["macros"] }
